--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   shared_preferences: ^2.3.3     # Basit veri depolama için
   dotlottie_loader: ^0.0.4
   lottie: ^3.1.3
+  provider: ^6.1.2
+  image_picker: ^0.8.7+4
+  file_picker: ^8.1.7
 
 dev_dependencies:
   flutter_test:
