--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8       # iOS stil ikonlar için
-  flutter_secure_storage: ^9.2.2 # Güvenli veri depolama için
-  go_router: ^14.6.1            # Sayfa yönlendirme (routing) için
-  shared_preferences: ^2.3.3     # Basit veri depolama için
+  cupertino_icons: ^1.0.8       
+  flutter_secure_storage: ^9.2.2 
+  go_router: ^14.6.1            
+  shared_preferences: ^2.3.3     
   dotlottie_loader: ^0.0.4
   lottie: ^3.1.3
   provider: ^6.1.2
   image_picker: ^0.8.7+4
   file_picker: ^8.1.7
+  path_provider: ^2.1.2 
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +31,4 @@ flutter:
     - assets/images/            # Görseller için
     - assets/icons/             # İkonlar için
     - assets/motions/           # Animasyon dosyaları için
+    - assets/data/news.json 
