--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^0.8.7+4
   file_picker: ^8.1.7
   path_provider: ^2.1.2 
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
